# meetalfred-mcp

./: .gitignore  API_ENDPOINTS.md  LICENSE  README.md  pyproject.toml  release.sh  server.json
.github/workflows/: publish.yml
meetalfred_mcp/: __init__.py  client.py  server.py
tests/: test_client.py
