[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetalfred-mcp"
version = "0.3.0"
description = "MCP server for MeetAlfred — campaign monitoring, lead management, and reply tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Paul Hoskins", email = "paul@proactioncto.com" }]

dependencies = [
    "mcp >= 1.0.0",
    "requests >= 2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
]

[project.scripts]
meetalfred-mcp = "meetalfred_mcp.server:main"

[project.urls]
Homepage = "https://github.com/cphoskins/meetalfred-mcp"
Repository = "https://github.com/cphoskins/meetalfred-mcp"
Issues = "https://github.com/cphoskins/meetalfred-mcp/issues"
